# auto-class-launcher-rust

./: Cargo.toml  auto-class-launcher-timetable.json
src/: main.rs
