[package]
name = "acl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "2"
webbrowser = "0.5.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
urlencoding = "2.1.0"

[profile.dev]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1